tests/ui/impl-trait/equality-in-canonical-query.clone.stderr
note: no errors encountered even though delayed bugs were created

note: those delayed bugs will now be shown as internal compiler errors

error: internal compiler error: {OpaqueTypeKey { def_id: DefId(rpit::{opaque#0}), args: [] }: OpaqueTypeDecl { hidden_type: OpaqueHiddenType { span: no-location (#0), ty: Alias(Opaque, AliasTy { args: [], def_id: DefId(foo::{opaque#0}) }) } }}
   |
   = 
           

error: internal compiler error: error performing ParamEnvAnd { param_env: ParamEnv { caller_bounds: [], reveal: UserFacing }, value: ProvePredicate { predicate: Binder { value: ProjectionPredicate(AliasTy { args: [FnDef(DefId(rpit), []), ()], def_id: DefId(ops::function::FnOnce::Output) }, Term::Ty(Alias(Opaque, AliasTy { args: [], def_id: DefId(foo::{opaque#0}) }))), bound_vars: [] } } }
  --> $DIR/equality-in-canonical-query.rs:21:5
   |
LL |     same_output(foo, rpit);
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |

  --> $DIR/equality-in-canonical-query.rs:21:5
   |
LL |     same_output(foo, rpit);
   |     ^^^^^^^^^^^^^^^^^^^^^^

query stack during panic:
end of query stack
